# dcriCTdash

./: CLAUDE.md  PRP_ClaudeOpus-3.md  PRP_Gemini2p5-2  PRP_Gemini2p5-2.md  README.md
.archived/: old01_usedForPhase1_CLAUDE.md
.bmad-core/: install-manifest.yaml
.venvll/: pyvenv.cfg
clinical-trial-dashboard/: DASHBOARD_README.md  DEVELOPMENT_ROADMAP.md  README.md  demo.py  errorLog.md  pyproject.toml  run_api_only.py  run_integrated_server.py  run_server.py  test_api.py
clinical-trial-dashboard/app/: __init__.py  dashboard.py  main.py
clinical-trial-dashboard/app/components/: __init__.py  charts.py  websocket_client.py
clinical-trial-dashboard/app/core/: __init__.py  clinical_dashboard.py  clinical_formats.py  data_dictionary.py  data_normalization.py  dictionary_dashboard.py  field_detection.py  medical_vocabularies.py
clinical-trial-dashboard/app/data/: __init__.py  database.py  generator.py  models.py  schemas.py
clinical-trial-dashboard/tests/: __init__.py  test_dashboard_core.py  test_data_models.py  test_main.py  test_phase3_features.py
